boulder/boulder/tests/compile_fail/binop/let_cmp.bo
# Expected 
# found `==`
# (6:

fn let_cmp() -> u32 {
    let x == 7;
    x
}